assets/css/_sass/_person.scss
/* Person Page: */

/* Universal */

// section titles
[class*="__title"][class*="person-"] {
	margin-bottom: .5em;
	margin-top: 1em;
	font-size: 1.75rem;
	font-weight: 900;
	line-height: 1;
	text-transform: uppercase;
	@media screen and (min-width: 600px) {
		font-size: 2rem;
	}
}


/* Main styles: */

.person-wrapper {
	padding: 0 4.167%;
	padding-top: 1em;
	@media screen and (min-width: 600px) {
		padding: 0 8.33%;
		padding-top: 3rem; // 2 line heights
	}
}

.person-main-content {
	position: relative;
	display: grid;
	grid-template-areas: "name"
						 "title"
						 "img"
						 "stats"
						 "describe"
						 "posts"
						 "button";
	grid-template-columns: 1fr;
	@media screen and (min-width: 768px) {
		grid-template-areas: "name img"
							 "title img"
							 "stats img"
							 "describe describe"
							 "posts posts"
							 "button button";
		grid-template-columns: 1fr 1fr;
	}
}

/* Name: */

.person__big-title {
	position: relative;
	grid-area: name;
//	margin-bottom: .5em;
	font-size: 3rem;
	font-weight: 900;
	line-height: 1;
	span {
		display: block;
		padding-bottom: .5em;
		font-size: .5em;
		font-family: "base-mono-wide";
	//	font-weight: 400;
		text-transform: uppercase;
		color: hsla(186,80%,70%,1);
	//	transform: translate(0, 6px);
	}
}

.person__position {
    grid-area: title;
    position: relative;
    display: flex;
    align-items: center;
}

.person-pos__title {
    margin-top: 0 !important;
    display: none;
}

.person-pos__text {
    position: relative;
    display: inline-block;
    margin-bottom: 1.5em;
    font-weight: 900;
    font-size: 1.5rem;
    line-height: 1;
    color: rgba(0, 0, 0, .5);
    &::after {
        content: '';
        position: absolute;
        bottom: 0;
        left: 0;
        display: block;
        width: 100%;
        height: 2px;
        z-index: -1;
    }
    @media screen and (min-width: 600px) {
        font-size: 1.5rem;
    }
}

/* Image: */

.person__img {
	grid-area: img;
	position: relative;
	img {
//		max-width: 100%;
	}
	@media screen and (min-width: 768px) {
		padding-left: 4.167%;
		img {
			width: 95.833%;
			float: right;
		}
	}
}

/* Description: */

.person__description {
	grid-area: describe;
	@media screen and (min-width: 1024px) {
		font-size: 18px;
	}
}

.person-describe__title {

}

.person-describe__text {

}

.liquid-testing {
    display: none !important;
}

/* Stats: */

.person__stats {
	grid-area: stats;
	@media screen and (min-width: 768px) {
		padding-right: 8.33%; // 4.167%;
	}
}

.person-stats__box {
	position: relative;
	border: 4px solid hsla(186,80%,70%,1);
	font-family: "base-mono-narrow", monospace;
	font-size: 20px;
	text-align: right;
	margin-top: 1.5em; //calc(2em + 4px);
	padding: .5em 1em;
	div {
		position: absolute;
		font-family: "Oswald", sans-serif;
		font-size: 1.5rem;
		font-weight: 600;
		text-transform: uppercase;
		text-align: left;
		line-height: 1;
		transform: translate(-1em, calc(-1.5em - 4px));
	}
	span {
		float: left;
		color: hsla(186,80%,70%,1);
	}
}

.person__posts {
	grid-area: posts;
}

.person-posts__title {

}

// <ul>
.person-posts__list {
    position: relative;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-content: space-between;
    padding: 0;
    list-style-type: none;
    /*	@media screen and (min-width: 1200px) {
		max-width: 1000px;
		margin: 0 auto;
	} */
    li {
        position: relative;
        display: inline-block;
        width: calc(100% - 1em);
        margin: .5em;
        font-size: 1.5rem;
        border: 4px solid hsla(186,80%,70%,1);
        a {
            display: flex;
            flex-flow: column nowrap;
            justify-content: center;
            height: 100%;
            width: 100%;
            padding: 0 1em;
            border: none !important;
            div {
                font-family: "Oswald", sans-serif;
                font-weight: 600;
            }
            span {
                font-family: "Oswald", sans-serif;
                font-weight: 600;
                color: rgba(0, 0, 0, 0.5);
            }
        }
    }
}

/* Button: */

.person__cta {
	grid-area: button;
	a {
		border-color: hsla(186,80%,70%,1) !important;
		color: hsla(186,80%,70%,1) !important;
	}
}

